tests/paczka1/small_fuzzy/28913537.err
Error in line 1: cD9C6fg S980 10,5
Error in line 10: cD9C6fg S700 147,7
